# Qthealthmonitor

./: CMakeLists.txt  README.md  asynctask.cpp  asynctask.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow1.cpp
